Styling of code-block scrollbar, fix table regex pattern

--- a/src/carddown_parser/static/base.css
+++ b/src/carddown_parser/static/base.css
@@ -74,8 +74,8 @@ body h2 {
 
 .multiline {
     margin: 0%;
-    border-radius: 2px;
-    padding-left: 1.5%;
+    border-radius: 1px;
+    
     padding-top: 0.01em;
     padding-bottom: 0.01em;
     position: relative;
@@ -85,7 +85,28 @@ body h2 {
     box-sizing: border-box;
     margin-top: 2%;
     margin-bottom: 2%;
+    padding-right: 40px;
 }
+
+.markdown-body .code-block-scrollbar-container {
+    overflow-x: auto;
+}
+
+
+.markdown-body .code-block-container {
+    margin-left: 20px;
+}
+
+
+
+.markdown-body code,
+.markdown-body kbd,
+.markdown-body pre,
+.markdown-body samp {
+  font-family: monospace;
+  font-size: 1em;
+}
+
 
 .btn-copy {
     position: absolute;
@@ -246,19 +267,6 @@ h6 > a,
 
 
 
-.markdown-body code,
-.markdown-body kbd,
-.markdown-body pre,
-.markdown-body samp {
-  font-family: monospace;
-  font-size: 1em;
-}
-
-.markdown-body .code-block-container {
-    overflow-x: auto;
-    margin-right: 40px;
-
-}
 
 .markdown-body hr {
     box-sizing: content-box;
